# click_storm

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  click_storm.code-workspace  design_notes.md
.cargo/: config.toml
.github/workflows/: ci.yml  deploy.yml  release.yml  scorecard.yml
benches/: worker_benchmark.rs
crates/cs_codegen/: Cargo.toml
crates/cs_codegen/src/: main.rs
crates/cs_hal/: Cargo.toml
crates/cs_hal/src/: lib.rs
crates/cs_hal/src/display/: mod.rs  screen_size.rs
crates/cs_hal/src/input/: button_direction.rs  keycode.rs  mouse_button.rs  mouse_click.rs
crates/cs_scripting/: Cargo.toml
crates/cs_scripting/src/: cs_interface.rs  lib.rs  output_log.rs  rhai_interface.rs  script.rs
crates/cs_scripting/src/hal/: button_direction.rs  keycode.rs  mod.rs  mouse.rs  mouse_button.rs  screen_size.rs
crates/egui_dock/src/widgets/dock_area/: mod.rs
crates/egui_dock/src/widgets/dock_area/show/: leaf.rs  mod.rs  window_surface.rs
locales/de-DE/: main.ftl
locales/en-US/: main.ftl
locales/es-ES/: main.ftl
locales/fr-FR/: main.ftl
scripts/: click_storm_api.d.rhai  example.rhai  test.rhai
src/: app.rs  app_settings.rs  do_once.rs  keycode.rs  lib.rs  main.rs  rhai_interface.rs  worker.rs
src/input/: keycode.rs  mod.rs  mouse_button.rs
src/localization/: language.rs  locale_text.rs  mod.rs
src/scripting/: cs_interface.rs  mod.rs  rhai_interface.rs  screen_size.rs
src/settings/: app_settings.rs  cursor_position.rs  mod.rs  mouse_button.rs  mouse_click.rs  repeat.rs  repeat_type.rs  user_settings.rs
src/ui/: clicker.rs  mod.rs  output_log.rs  script.rs  script_editor.rs
