[package]
name = "click_storm"
version = "0.1.0"
authors = ["James Lennon"]
edition = "2021"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
license = "MIT/Apache-2.0"
resolver = "2"
#build = "build.rs"

#[build-dependencies]
#embed-resource = { version = "2.4" }

[lints.rust]
unsafe_op_in_unsafe_fn = "warn"
missing_docs = "warn"
unsafe_code = "deny"

[dependencies]
egui = "0.28"
eframe = { version = "0.28", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }

# Localization
fluent = "0.16"
fluent-templates = "0.10"
unic-langid = "0.9"

# Logging
log = "0.4"
env_logger = "0.11"

# Serialization for persistence
serde = { version = "1", features = ["derive"] }

# Hardware control
enigo = "0.2"

# Enum helpers
strum = "0.26"
strum_macros = "0.26"


[profile.release]
opt-level = 2
lto = true

# Optimize all dependencies even in debug builds
[profile.dev.package."*"]
opt-level = 2
