[package]
name = "click_storm"
version = "0.2.9"
authors = ["James Lennon"]
edition = "2024"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
license = "MIT/Apache-2.0"
publish = false
build = "build.rs"
default-run = "click_storm"

[build-dependencies]
embed-resource = { version = "3.0" }

# Click Storm application
[[bin]]
name = "click_storm"
path = "src/main.rs"

# Currently used to generate the definition files for the scripting engine LSP
[[bin]]
name = "cs_codegen"
path = "crates/cs_codegen/src/main.rs"
required-features = ["scripting"]

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"
missing_docs = "warn"
unsafe_code = "deny"

[workspace.lints.clippy]
#pedantic = "warn"

[workspace.dependencies]
cs_hal = { path = "crates/cs_hal" }
cs_scripting = { path = "crates/cs_scripting" }

# Hardware control
enigo = "0.3"
device_query = "3"

# Serialization 
serde = { version = "1.0", features = ["derive"] }

# Enum helpers
strum = "0.27"
strum_macros = "0.27"

# Scripting
rhai = { version = "1" }

# Misc
rand = "0.9"

[dependencies]
cs_hal = { workspace = true }
cs_scripting = { workspace = true }

enigo = { workspace = true }
device_query = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
rand = { workspace = true }
rhai = { workspace = true, optional = true, features = [
    "only_i32",
    "f32_float",
    "no_custom_syntax",
    # TODO: Check if this is needed
    "metadata",
] }

egui = "0.31"
eframe = { version = "0.31", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland",
] }
egui_code_editor = "0.2"
egui_dock = { version = "0.16", features = ["serde"] }

# File dialog
rfd = "0.15"

# Localization
fluent = "0.16"
fluent-templates = "0.13"
unic-langid = "0.9"

# Logging
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "worker_benchmark"
harness = false


[profile.release]
opt-level = 2
lto = true
strip = true

# Optimize all dependencies even in debug builds
[profile.dev.package."*"]
opt-level = 2

[features]
#default = []
default = ["scripting"]
scripting = ["dep:rhai", "cs_scripting/scripting"]
